--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -30,10 +31,12 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "openai": "^6.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.3.1",
     "recharts": "^3.5.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
