--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-themes": "^0.4.6",
     "openai": "^6.10.0",
     "react": "^18.3.1",
     "react-day-picker": "^9.12.0",
@@ -41,7 +42,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.19.26",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.20",
