--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.454.0",
+    "motion": "^12.23.26",
     "next": "14.2.16",
     "next-themes": "^0.4.6",
     "openai": "^6.10.0",
